# Domain-Reputation-Measure

./: CHANGELOG.md  Dockerfile  GraphConvolutionNetwork.ipynb  LICENSE  MANIFEST.in  README-proect.md  README.md  alembic.ini  app.py  asn_processor.py  benchmark.py  config.example.yaml  dns_processor.py  docker-compose.sqlite.yml  docker-compose.yml  domain_asn_mapper.db  index.html  main.py  output_formatter.py  pyproject.toml  pytest.ini  replit.nix  sample_domains.txt  test_domains.txt
Average Degree-V1.0-11-06-23/: report.html
Average Weighted Degree/11-06-23/: report.html
Closeness Distribution-12-06-23/: report.html
HITS Report/11-06-23/: report.html
Modularity Report/12-06-23/: report.html
Sample Network Analytics on Multi Domain Graph Represenattion/Eigenvector Centrality/12-06-23/: report.html
Sample Network Analytics on Multi Domain Graph Represenattion/Graph Emdebing -Trenco 1M (domina-country)/: FastNode2Vec - Embedding.ipynb
__MACOSX/: ._NetworkTraceAnalyzer
__MACOSX/NetworkTraceAnalyzer/: ._asn_processor.py
alembic/: env.py
alembic/versions/: 2247a813c248_initial_database_schema.py
core/: __init__.py  asn_analytics.py  async_dns_processor.py  config.py  database.py  exporters.py  logging_config.py  mrt_downloader.py  processor.py  scan_diff.py  scan_storage.py  validators.py  visualizations.py
docs/: DEVELOPER_GUIDE.md  RIPE_LABS_ARTICLE.md  USER_GUIDE.md
docs/examples/: analytics_output.txt  cluster_output.txt  diff_output.txt  sample_output.json
templates/: base.html  index.html  results.html
test/: test
tests/: __init__.py  conftest.py  test_asn_processor.py  test_core_processor.py  test_dns_processor.py  test_main.py  test_output_formatter.py
